# petey

./: .gitignore  Dockerfile  LICENSE  Makefile  PETEY FAQ  README.md  TODO.md  app.py  par_batch.py  par_rag_extract.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
petey/: __init__.py  cli.py  concurrency.py  extract.py  schema.py
petey/plugins/: azure_documentai.py  docling.py  easyocr_backend.py  google_documentai.py  google_vision_ocr.py  liteparse.py  mistral_ocr.py  paddleocr_backend.py  surya_ocr.py  textract.py  unstructured.py
schemas/: mci_closed_cases.yaml  par_decision.yaml
server/: app.py  extract.py
templates/: builder.html
tests/: conftest.py  test_api.py  test_concurrency.py  test_extract.py  test_infer_schema.py  test_page_range.py  test_registries.py  test_schema.py
